fix navbar going behind uppy (#171)

--- a/src/pages/examples.module.css
+++ b/src/pages/examples.module.css
@@ -92,3 +92,8 @@
 		grid-template-columns: minmax(20rem, 1fr) 2fr;
 	}
 }
+
+.dashboard-inner {
+	position: relative;
+	z-index: 1;
+}
